Spacing issues in listing, project card, explore more

--- a/blocks/exploremore/exploremore.css
+++ b/blocks/exploremore/exploremore.css
@@ -1,6 +1,6 @@
 .exploremore-container{
   background-color: var(--whisper-gray);
-  padding: 80px 0;
+  padding: 45px 0;
 } 
 
 .exploremore .exploremore-wrapper-container .exploremore-title{
